# CLAPPy

./: .clang-format  .gitignore  CLAPPy.pyi  CMakeLists.txt  LICENSE  README.md  pyproject.toml  setup.py
CLAPPy/: CLAPPy.pyi  __init__.py
examples/: AxiDMATest.py  DDRTest.py  HLSTest.py
scripts/stub/: create_stub.sh  requirements.txt
src/: CLAPPy.cpp
